--- a/Minggu_04.ipynb
+++ b/Minggu_04.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style='background-image: url(\"share/header.png\") ; padding: 0px ; background-size: cover ; border-radius: 5px ; height: 400px'>\n",
+    "<div style='background-image: url(\"share\header.png\") ; padding: 0px ; background-size: cover ; border-radius: 5px ; height: 400px'>\n",
     "    <div style=\"float: right ; margin: 125px ; padding: 10px ; background: rgba(255 , 255 , 255 , 0.7) ; width: 53% ; height: 100px\">\n",
     "        <div style=\"position: relative ; top: 50% ; transform: translatey(-50%)\">\n",
     "            <div style=\"font-size: xx-large ; font-weight: 950 ; color: rgba(0 , 0 , 0 , 0.8) ; line-height: 100%\">Struktur Dasar Program Prosedural – Python </div>\n",
