--- a/Minggu_12.ipynb
+++ b/Minggu_12.ipynb
@@ -26,8 +26,6 @@
     "Instalasi Pandas: dalam paket Anaconda (http://www.anaconda.com)\n",
     "Model data pada Pandas disebut DataFrame: data dalam bentuk tabular (tabel dengan kolom dan baris)\n",
     "\n",
-    "![picture](https://pandas.pydata.org/static/img/pandas_white.svg)\n",
-    "\n",
     "Source : (https://pandas.pydata.org/)"
    ]
   },
@@ -79,6 +77,15 @@
    "outputs": [],
    "source": [
     "!pip install pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git clone https://github.com/adxptra/KU1102.git"
    ]
   },
   {
@@ -135,7 +142,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "df3 = pd.read_csv(\"Data/medali.csv\")\n",
+    "df3 = pd.read_csv(\"/content/KU1102/Data/medali.csv\")\n",
     "print(df3)"
    ]
   },
@@ -154,7 +161,7 @@
    "source": [
     "import pandas as pd\n",
     "sn = \"Sheet1\" \n",
-    "df4 = pd.read_excel(\"Data/medali.xlsx\",sheet_name=sn)\n",
+    "df4 = pd.read_excel(\"/content/KU1102/Data/medali.xlsx\",sheet_name=sn)\n",
     "print(df4)"
    ]
   },
@@ -179,7 +186,7 @@
    "outputs": [],
    "source": [
     "# Asumsi df3 sudah terdefinisi (lihat slide sebelumnya)\n",
-    "df3.to_csv(\"Data/medali_out.csv\")"
+    "df3.to_csv(\"/content/KU1102/Data/medali_out.csv\")"
    ]
   },
   {
@@ -196,7 +203,7 @@
    "outputs": [],
    "source": [
     "# Asumsi df4 sudah terdefinisi (lihat slide sebelumnya)\n",
-    "writer = pd.ExcelWriter(\"Data/medali_out.xlsx\")\n",
+    "writer = pd.ExcelWriter(\"/content/KU1102/Data/medali_out.xlsx\")\n",
     "df4.to_excel(writer, \"Sheet1\")\n",
     "df4.to_excel(writer, \"Sheet2\") #tulis data yang sama di sheet lain"
    ]
@@ -623,7 +630,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df5 = pd.read_csv(\"Data/data.csv\")\n",
+    "df5 = pd.read_csv(\"/content/KU1102/Data/data.csv\")\n",
     "df5.groupby(\"gender\").value_counts()"
    ]
   },
